fix: corrige overflow horizontal trocando 100vw por 100%

--- a/layout/_grid.scss
+++ b/layout/_grid.scss
@@ -4,7 +4,7 @@
 
 .container {
     @include grid($cols: 1fr);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 
     @include respond-to(md){
